[tool.poetry]
name = "occem"
version = "0.1.0"
description = ""
authors = ["Charlie Brown <cntvc@outlook.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
dominate = "^2.9.1"
aiohttp = "^3.9.3"
pydantic = "^2.7.0"
ruff = "^0.3.7"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100
fix = true
src = ["occem", "tests"]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "I"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",   # unused import.
    "F403",   # cannot detect unused vars if we use starred import
    "F405",   # may be undefined, or defined from star imports
    "E402",   # module level import not at top of file
]